# rosbag-to-tum

./: .gitignore  README.md  pyproject.toml
src/rosbag_to_tum/: __init__.py  camera.py  cli.py  formatter.py  metadata.py  reader.py  trajectory.py  visual_tracker.py
tests/: conftest.py  test_basic.py
